CallMD/src/objects/Subscriptions__c.object
<CustomObject>
    <fields>
        <fullName>B2B_D2C_Ref__c</fullName>
        <label>B2B/D2C Ref</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_D2C__c</fullName>
        <formula>TEXT( Program__r.Program_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B2B/D2C</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultation_Renewal__c</fullName>
        <label>Consultation Renewal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Amount__c</fullName>
        <formula>Program__r.Copay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Copay_Yes_No__c</fullName>
        <formula>TEXT(Program__r.Copay_Yes_No__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copay Yes/No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>CASE(TEXT(Program__r.Duration__c),&quot;One Time&quot;,1,&quot;1 Month&quot;,30,&quot;3 Months&quot;,90,&quot;6 Months&quot;,180,&quot;1 Year&quot;,365,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
                <value>
                    <fullName>Stripe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>InProgress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <formula>Program__r.Pricing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <formula>Provider__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>Providers__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Consultation__c</fullName>
        <formula>IF(B2B_D2C__c==&apos;D2C&apos;
,IF(ISPICKVAL(Subscription_Type__c,&quot;New&quot;),(Total_Consultation_To_Do__c - Total_Consultations_Done__c),IF(ISPICKVAL(Subscription_Type__c,&quot;Renewal&quot;),Consultation_Renewal__c,0)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Consultation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Status__c</fullName>
        <label>Renewal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>InActive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>IF(B2B_D2C_Ref__c ==&apos;D2C&apos;,IF(ISPICKVAl(Payment__c,&quot;Successful&quot;),
IF(Status__c==&apos;Active&apos;,&apos;New Consultation&apos;,IF(AND(Status__c==&apos;Expired&apos;,End_Date__c&gt;TODAY()),&apos;Update Consultation&apos;,IF(AND(Status__c=&apos;Expired&apos;,End_Date__c&lt;=TODAY()),&apos;New Subscription&apos;,&apos;&apos;))),&apos;Please check with payment status&apos;),
IF(AND(B2B_D2C_Ref__c ==&apos;B2B&apos;,End_Date__c&gt;TODAY()),&apos;New Consultation&apos;,&apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(B2B_D2C_Ref__c ==&apos;D2C&apos;,IF(AND(ISPICKVAL(Subscription_Type__c,&quot;New&quot;),ISPICKVAL(Payment__c ,&quot;Successful&quot;),End_Date__c&gt;=TODAY(),Remaining_Consultation__c&gt;=1),&apos;Active&apos;,
IF(AND(ISPICKVAL(Subscription_Type__c,&quot;Renewal&quot;),End_Date__c&gt;=TODAY(),Consultation_Renewal__c &gt;=1),&apos;Active&apos;,&apos;Expired&apos;)),IF(AND(B2B_D2C_Ref__c ==&apos;B2B&apos;,End_Date__c&gt;=TODAY()),&apos;Active&apos;,&apos;Expired&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriptions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriptions</label>
        <referenceTo>Subscriptions__c</referenceTo>
        <relationshipLabel>Subscriptions (Child)</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Consultation_To_Do__c</fullName>
        <formula>IF(B2B_D2C__c==&apos;D2C&apos;,Program__r.No_of_Consultations__c +  Program__r.Free_Consultations__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Consultation To Do</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Consultations_Completed_B2B__c</fullName>
        <label>Total Consultations Completed B2B</label>
        <summaryFilterItems>
            <field>Open_Consultants__c.B2B_D2C__c</field>
            <operation>equals</operation>
            <value>B2B</value>
        </summaryFilterItems>
        <summaryForeignKey>Open_Consultants__c.Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Consultations_Done__c</fullName>
        <label>Total Consultations Done</label>
        <summaryForeignKey>Open_Consultants__c.Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Subscriptions</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Subscriptions ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>